tests/script_runtime_errors/patch_merge_on_non_object/error.txt
Error: 
    1 | patch {"a": 1, "b": 2} of
    2 |   merge "a" => {"c": 3}
      |   ^^^^^^^^^^^^^^^^^^^^^ Merge can only be performed on keys that either do not exist or are records but the key 'a' has the type integer
    3 | end